More stable STM32 settings sync method

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -57,7 +57,8 @@
     "stat.h": "c",
     "esp_spiffs.h": "c",
     "unistd.h": "c",
-    "cmath": "c"
+    "cmath": "c",
+    "format": "c"
   },
   "idf.adapterTargetName": "esp32s2",
   "idf.flashType": "UART",
