--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -5,6 +5,7 @@ idf_component_register(SRCS
                             "main.c"
                             "rest_server.c"
                             "settings.c"
+                            "spi_control.h"
                             "tempsensor.c"
                             
                     INCLUDE_DIRS "")
