--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -72,10 +72,12 @@
     "esp_event.h": "c",
     "esp_netif_types.h": "c",
     "build_info.h": "c",
-    "soc_caps.h": "c"
+    "soc_caps.h": "c",
+    "esp_http_server.h": "c"
   },
   "idf.adapterTargetName": "esp32s2",
   "idf.flashType": "UART",
   "idf.portWin": "COM7",
-  "cmake.configureOnOpen": false
+  "cmake.configureOnOpen": false,
+  "idf.port": "/dev/ttyACM0"
 }
