--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -1,5 +1,7 @@
 idf_component_register(SRCS 
                             "console.c"
+                            "firmwareESP32.c"
+                            "firmwareSTM32.c"
                             "hmi.c"                            
                             "logger.c"                    
                             "main.c"
