--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,4 @@ front/www/ajax/getFileList/dir_1/dir_1_dir_1/index.json
 .gitignore
 front/www/ajax/getFileList/dir_1/dir_1_dir_1/.htaccess
 front/www/ajax/getFileList/dir_1/index.json
+log.txt
