--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,4 +1,4 @@
-image: espressif/idf:latest
+image: espressif/idf:v5.0.1
 
 # before_script:
 # - apt-get update -y && apt-get install -y git wget python3.10-venv
@@ -17,6 +17,8 @@ stages:
 
 update_version:
   stage: update_version
+  only:
+    - master
   script:
     - |
       sed -i '/MINOR = /s/\(MINOR = \)\([0-9]\+\)/echo "\1$((\2 + 1))"/e' update_version.py
