--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -38,13 +38,13 @@ create_artifact_zip:
     - echo "VERSION is: $VERSION"
     - mv build/uberlogger-esp32.bin build/ota_main.bin
     - mv build/www.bin build/ota_filesystem.bin
-    - zip ${VERSION}_artifacts.zip build/ota_main.bin build/ota_filesystem.bin
+    - zip artifacts.zip build/ota_main.bin build/ota_filesystem.bin
+    - mv artifacts.zip ${VERSION}_artifacts.zip
     - ls -l ${VERSION}_artifacts.zip || echo "${VERSION}_artifacts.zip not found"
-  dependencies:
-    - build_code
   artifacts:
     paths:
-      - ${VERSION}_artifacts.zip
+      - *_artifacts.zip
+
 
 create_release:
   stage: create_release
