--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -43,8 +43,7 @@ create_artifact_zip:
     - ls -l ${VERSION}_artifacts.zip || echo "${VERSION}_artifacts.zip not found"
   artifacts:
     paths:
-      - *_artifacts.zip
-
+      - ${VERSION}_artifacts.zip
 
 create_release:
   stage: create_release
