--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -41,9 +41,9 @@ create_artifact_zip:
     - mv artifacts.zip ${VERSION}_artifacts.zip
     - ls -l ${VERSION}_artifacts.zip || echo "${VERSION}_artifacts.zip not found"
   artifacts:
-    name: "${VERSION}_artifacts.zip"
+    name: ${VERSION}_artifacts.zip
     paths:
-      - "${VERSION}_artifacts.zip"
+      - ${VERSION}_artifacts.zip
 
 create_release:
   stage: create_release
