YAML Release try

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -55,8 +55,14 @@ create_release:
     - |
       git tag $VERSION
       git push origin $VERSION
-      curl --header "PRIVATE-TOKEN: glptt-751479be01e5f5db4fd3961eada69c2b926b4b98" -X POST "https://gitlab.com/api/v4/projects/39465634/releases" -d "name=$VERSION" -d "tag_name=$VERSION" -d "description=Release version $VERSION"
+      ARTIFACT_LINK="https://gitlab.com/uberlogger/uberlogger-esp32/-/jobs/artifacts/${VERSION}/download?job=create_artifact_zip"
+      curl --header "PRIVATE-TOKEN: glptt-751479be01e5f5db4fd3961eada69c2b926b4b98" -X POST "https://gitlab.com/api/v4/projects/39465634/releases" \
+      -d "name=$VERSION" \
+      -d "tag_name=$VERSION" \
+      -d "description=Release version $VERSION" \
+      -d "assets[links][][name]=Artifacts" \
+      -d "assets[links][][url]=$ARTIFACT_LINK"
   dependencies:
-    - build_code
+    - create_artifact_zip
   only:
     - master
