--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -17,6 +17,7 @@ build_code:
   script:
     - sed -i '/CONFIG_ESP_CONSOLE_USB_CDC=y/d' sdkconfig
     - sed -i '/CONFIG_ESP_CONSOLE_USB_CDC_RX_BUF_SIZE=64/d' sdkconfig
+
     - idf.py build
     - |
       VERSION=$(grep 'static const char SW_VERSION\[\]' main/sysinfo.h | awk -F '"' '{print $2}' | awk -F '_' '{print $1}')
@@ -24,6 +25,8 @@ build_code:
           VERSION="dirty_${VERSION}"
       fi
       echo "VERSION=${VERSION}" >> build_vars
+    - git commit -m "Updated release version to ${VERSION}"
+    - git push https://oauth2:${GITLAB_PRIVATE_TOKEN}@gitlab.com/uberlogger/uberlogger-esp32.git -o ci.skip
     - mv build/uberlogger-esp32.bin build/ota_main.bin
     - mv build/www.bin build/ota_filesystem.bin
   artifacts:
@@ -45,8 +48,9 @@ create_release:
     #
     # - git push origin v1.9d --force -o ci.skip
     - git tag $VERSION
-    - git push https://oauth2:${GITLAB_PRIVATE_TOKEN}@gitlab.com/uberlogger/uberlogger-esp32.git --tags
-    - ARTIFACT_LINK="https://gitlab.com/uberlogger/uberlogger-esp32/-/jobs/artifacts/${VERSION}/download?job=create_artifact_zip"
+    - git push https://oauth2:${GITLAB_PRIVATE_TOKEN}@gitlab.com/uberlogger/uberlogger-esp32.git --tags -o ci.skip
+    #https://gitlab.com/uberlogger/uberlogger-esp32/-/jobs/5041432763/artifacts/download
+    - ARTIFACT_LINK="https://gitlab.com/uberlogger/uberlogger-esp32/-/jobs/artifacts/${VERSION}/download?job=build_code"
     - |
       curl --header "PRIVATE-TOKEN: ${GITLAB_PRIVATE_TOKEN}" -X POST "https://gitlab.com/api/v4/projects/39465634/releases" \
       -d "name=$VERSION" \
