--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,4 @@ front/www/ajax/getFileList/dir_1/dir_1_dir_1/index.json
 front/www/ajax/getFileList/dir_1/dir_1_dir_1/.htaccess
 front/www/ajax/getFileList/dir_1/index.json
 log.txt
+firmware.bin
