--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -17,9 +17,16 @@ build_code:
           VERSION="dirty_${VERSION}"
       fi
       echo "VERSION=${VERSION}" >> build_vars
-
+    - |
+      esptool.py --chip esp32s2 merge_bin --output ./firmware.bin --flash_mode dio --flash_freq 80m --flash_size 4MB \
+      0x1000 build/bootloader/bootloader.bin \
+      0x8000 build/partition_table/partition-table.bin \
+      0xf000 build/ota_data_initial.bin \
+      0x20000 build/uberlogger-esp32.bin \
+      0x27c000 build/www.bin
     - mv build/uberlogger-esp32.bin build/ota_main.bin
     - mv build/www.bin build/ota_filesystem.bin
+
   artifacts:
     name: ${VERSION}
     paths:
