--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,16 +8,16 @@
       "request": "launch",
       "MIMode": "gdb",
       // "cwd": "${workspaceFolder}/build",
-      // "program": "${workspaceFolder}/build/uberlogger-esp32.elf",
-      // "miDebuggerPath": "C:/Espressif/tools/xtensa-esp32s2-elf/esp-2022r1-11.2.0/xtensa-esp32s2-elf/bin/xtensa-esp32s2-elf-gdb.exe",
+      "program": "${workspaceFolder}/build/uberlogger-esp32.elf",
+      "miDebuggerPath": "C:/Espressif/tools/xtensa-esp32s2-elf/esp-2022r1-11.2.0/xtensa-esp32s2-elf/bin/xtensa-esp32s2-elf-gdb.exe",
       // "setupCommands": [
       //   { "text": "target remote :3333" },
       //   { "text": "set remote hardware-watchpoint-limit 2" },
       //   { "text": "monitor reset halt" },
       //   { "text": "flushregs" }
       // ]
-      "miDebuggerPath": "${command:espIdf.getXtensaGdb}",
-      "program": "${workspaceFolder}/build/${command:espIdf.getProjectName}.elf",
+      // "miDebuggerPath": "${command:espIdf.getXtensaGdb}",
+      // "program": "${workspaceFolder}/build/${command:espIdf.getProjectName}.elf",
       "windows": {
         "program": "${workspaceFolder}\\build\\${command:espIdf.getProjectName}.elf"
       },
