working file splitter. No UI interface. No check on existing part file

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -59,8 +59,7 @@
     "unistd.h": "c",
     "cmath": "c",
     "format": "c",
-    "spi_control.h": "c"
-    "format": "c",
+    "spi_control.h": "c",
     "fcntl.h": "c",
     "esp_console.h": "c",
     "u8g2.h": "c",
@@ -75,11 +74,9 @@
     "esp_netif_types.h": "c",
     "build_info.h": "c",
     "soc_caps.h": "c",
-    "esp_http_server.h": "c"
+    "esp_http_server.h": "c",
+    "config.h": "c"
   },
   "idf.adapterTargetName": "esp32s2",
-  "idf.flashType": "UART",
-  "idf.portWin": "COM7",
-  "cmake.configureOnOpen": false,
-  "idf.port": "/dev/ttyACM0"
+  "idf.flashType": "UART"
 }
