--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -5,7 +5,8 @@ idf_component_register(SRCS
                             "firmwareESP32.c"
                             "firmwareSTM32.c"
                             "firmware-www.c"
-                            "hmi.c"                     
+                            "hmi.c"         
+                            "iirfilter.c"            
                             "logger.c"                    
                             "main.c"
                             "rest_server.c"
