--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,12 +21,10 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      # Build
       - name: idf.py build
         run: |
           idf.py build
 
-      # Compute VERSION (same as your GitLab grep/awk), add dirty_ except on master
       - name: Compute version
         id: setver
         shell: bash
@@ -38,7 +36,6 @@ jobs:
           echo "VERSION=${VERSION}" > build_vars
           echo "version=${VERSION}" >> "$GITHUB_OUTPUT"
 
-      # Merge bins + rename to your expected OTA files
       - name: Merge and prepare binaries
         shell: bash
         run: |
@@ -51,8 +48,7 @@ jobs:
           mv build/uberlogger-esp32.bin ./ota_main.bin
           mv build/www.bin ./ota_filesystem.bin
 
-      # Optional: bundle everything into a single versioned package (zip)
-      - name: Create package
+      - name: Create package (zip)
         shell: bash
         run: |
           VERSION=$(cut -d= -f2 build_vars)
@@ -60,7 +56,6 @@ jobs:
           cp firmware.bin ota_main.bin ota_filesystem.bin build_vars dist/
           (cd dist && zip -r "uberlogger-esp32-${VERSION}.zip" firmware.bin ota_main.bin ota_filesystem.bin build_vars)
 
-      # Keep artifacts for the next job and for manual download if needed
       - name: Upload build artifacts
         uses: actions/upload-artifact@v4
         with:
@@ -74,7 +69,6 @@ jobs:
 
   release:
     name: Create tag & GitHub Release
-    # Only release from master just like your GitLab job
     if: github.ref_name == 'master'
     runs-on: ubuntu-latest
     needs: build
@@ -91,14 +85,12 @@ jobs:
           name: ${{ needs.build.outputs.version }}
           path: dist
 
-      # Create the tag (mirrors your GitLab tag step)
       - name: Create and push tag
         env:
           VERSION: ${{ needs.build.outputs.version }}
         run: |
           git config user.name "ci-cd"
           git config user.email "ci@cd.com"
-          # Only create if it doesn't exist (re-runs won't fail)
           if git rev-parse "refs/tags/${VERSION}" >/dev/null 2>&1; then
             echo "Tag ${VERSION} already exists."
           else
@@ -106,49 +98,17 @@ jobs:
             git push origin "refs/tags/${VERSION}"
           fi
 
-      # Create Release and upload assets (bins + the zip "package")
-      - name: Create GitHub Release
-        id: create_release
-        uses: actions/create-release@v1
+      # Create release and upload assets (bins + the zip package)
+      - name: Publish GitHub Release
+        uses: softprops/action-gh-release@v2
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           tag_name: ${{ needs.build.outputs.version }}
-          release_name: ${{ needs.build.outputs.version }}
+          name: ${{ needs.build.outputs.version }}
           body: Release version ${{ needs.build.outputs.version }}
-
-      - name: Upload firmware.bin
-        uses: actions/upload-release-asset@v1
-        env: { GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} }
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: dist/firmware.bin
-          asset_name: firmware.bin
-          asset_content_type: application/octet-stream
-
-      - name: Upload ota_main.bin
-        uses: actions/upload-release-asset@v1
-        env: { GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} }
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: dist/ota_main.bin
-          asset_name: ota_main.bin
-          asset_content_type: application/octet-stream
-
-      - name: Upload ota_filesystem.bin
-        uses: actions/upload-release-asset@v1
-        env: { GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} }
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: dist/ota_filesystem.bin
-          asset_name: ota_filesystem.bin
-          asset_content_type: application/octet-stream
-
-      - name: Upload packaged zip
-        uses: actions/upload-release-asset@v1
-        env: { GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} }
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: dist/uberlogger-esp32-${{ needs.build.outputs.version }}.zip
-          asset_name: uberlogger-esp32-${{ needs.build.outputs.version }}.zip
-          asset_content_type: application/zip
+          files: |
+            dist/firmware.bin
+            dist/ota_main.bin
+            dist/ota_filesystem.bin
+            dist/uberlogger-esp32-${{ needs.build.outputs.version }}.zip
